--- a/contactes.html
+++ b/contactes.html
@@ -13,7 +13,7 @@
     moov: 41461529</p>
   <a href="mailto:franckysleroi@gmail.com?subject=feedback">mon email</a>
   <p><b><i>franckysleroi@gmail.com</i></b></p><br>
-  <form action="mailto:frankckysleroi@gmail.com" method="post" enctype="text/plain">
+  <form action="mailto:franckysleroi@gmail.com" method="post" enctype="text/plain">
     <label> Votre Nom :</label>
     <input type="text" name="tonNom" value=""><br>
     <label>Votre Email:</label>
