--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <center><img src="images/Franck1.jpg" alt="profil picture" border=2></center>
+  <center><img src="Franckysleroi/mages/Franck1.jpg" alt="profil picture" border=2></center>
   <center>
     <h1> Cape Franck Daniel </h1>
   </center>
