--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1> Cape Franck Daniel </h1>
   </center>
   <center>
-    <p>juste un test pour voir si je suis competant pour dans:<br><strong>the web development</strong><br> en <i>html.</i></p>
+    <p>juste un test pour voir si je suis competant pour:<br><strong>the web development</strong><br> en <i>html.</i></p>
   </center>
   <hr>
   <h3>Qui suis je?</h3>
